# Brazillian_Orders_Peter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: ci-cd.yml
src/: api.py  database.py  main.py  processing.py  utils.py
src/static/: swagger.json
tests/: test_api.py  test_database.py  test_processing.py
