[tool.poetry]
name = "brazillian-orders-peter"
version = "0.1.0"
description = "An Application that extract, transforms and loads customers orders data to a duckdb database."
authors = ["Peter"]
readme = "README.md"
packages = [
    { include = "src"}
]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
polars = "1.12.0"
duckdb = "0.8.1"
pandas = "1.3.1"
sqlalchemy = "1.4.25"
duckdb-engine = "0.13.4"
pyarrow = ">=8.0.0"
xlsxwriter = "3.2.0"
flask = "^3.0.3"
xlsx2csv = "0.8.3"
fastexcel = "0.12.0"
flask-swagger-ui = "^4.11.1"
werkzeug = "^3.1.3"



[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
